[gd_scene load_steps=5 format=2]

[ext_resource path="res://storage_box.png" type="Texture" id=1]
[ext_resource path="res://player_rectangle.tscn" type="PackedScene" id=2]
[ext_resource path="res://storage_box.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="u_subtitution" type="Area2D"]
script = ExtResource( 3 )

[node name="player_rectangle" parent="." instance=ExtResource( 2 )]

[node name="StorageBox" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="display_copy" type="Node2D" parent="."]
position = Vector2( 111, 0 )

[connection signal="input_event" from="." to="." method="_on_storage_box_input_event"]
[connection signal="get_all_characters" from="player_rectangle" to="." method="_on_player_rectangle_get_all_characters"]
